--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "alexandro",
         "bson",
         "mongodb",
+        "onlinestore",
         "pymongo"
     ],
     "cSpell.ignoreWords": [
